@@ -19,6 +19,8 @@ Changes
 - Extracted common Resource interface for Image and Color classes
 - rewritten from scratch Python to C-API bridge
 - lazy loading of C-function definitions
+- support for logging debug events pystacia logger
+- bridge sandboxing of client code from C-API
 
 Deprecated
 ----------
